# Quota-Manager

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  ROADMAP.md  mkdocs.yml  pyproject.toml  sitemap.xml
.specify/feat-008-quota-forecasting/: checklist.md  plan.md  spec.md  tasks.md
.specify/memory/: constitution.md
adr/001-python-language/: index.html
docs/: SETUP.md  contributing.md  getting-started.md  index.md  scheduling.md
docs/adr/: 001-python-language.md
docs/proposals/: feat-008-quota-forecasting.md
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/SETUP/: index.html
site/adr/000-template/: index.html
site/adr/001-python-language/: index.html
site/adr/002-precommit-required/: index.html
site/contributing/: index.html
site/getting-started/: index.html
site/scheduling/: index.html
site/search/: search_index.json
