[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quota-manager"
version = "0.1.0"
description = "Usage tracking and budget allocation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["pydantic>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "pre-commit>=3.7"]

[tool.hatch.build.targets.wheel]
packages = ["src/quota_manager"]

[tool.ruff]
line-length = 88
target-version = "py310"
